assets/css/main.css
/* ... */
/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #f63854;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

/*Scoll bar designing ends here-------------------------------->*/

/*----------Event Section Starts here--------------------->*/

.events_container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 60px;
  margin-bottom: 120px;
}

.events_box {
  flex: 0 0 18em;
  border: 2px solid white;
  overflow: hidden;
  position: relative;
  box-shadow: 0px 0px 15px gray;
  border-radius: 15px;
  transition: all 1s;
  height: 21em;
}

.events_box img {
  width: 100%;
  height: 100%;
  aspect-ratio: 16/9;
}

.events_box .content {
  padding: 10px;
  margin-top: 10px;
  display: none;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.events_box:hover {
  box-shadow: 0px 0px 30px rgb(87, 4, 4);
}

.events_box:hover .content {
  display: block;
}
.events_box:hover .content a{
  margin-left:32px;
}

.events_box:hover .events_img {
  display: none;
}

.events_box .content h4 {
  font-size: 2rem;
  color: #f63854;
}

.events_box .content p {
  font-size: 1.5rem;
  color: #f63854;
  padding: 1rem 0;
  font-stretch: normal;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

.events_box_row {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 4%;
}

@media screen and (max-width: 1200px) {
  .events_box {
    margin-left: 1.5em;
    border: 2px solid;
  }
}

@media screen and (max-width: 517px) {
  .events_box {
    align-items: center;
  }

  .events_img {
    height: 100%;
    border-radius: 15px;
  }
}

/*--------------Event-Buttons starts here--------------->*/
/* .btn {
  display: inline-block;
  padding: 0.5rem 3rem;
  border: 0.2rem solid #f63854;
  color: black;
  cursor: pointer;
  font-size: 1.5rem;
  border-radius: 0.5rem;
  position: relative;
  overflow: hidden;
  z-index: 0;
  margin-top: 1rem;
}

.btn::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  width: 0%;
  height: 100%;
  background: #f63854;
  transition: 0.3s linear;
  z-index: -1;
}
.btn:hover::before {
  width: 100%;
  left: 0;
}

.btn:hover {
  color: #fff;
  
} */

/*-------------------Event Section ends here---------------------------->*/

.form-control {
  width: 100%;
  margin-bottom: 20px;
  font-size: 14px;
  border-radius: 4px;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
  padding: 10px;
  border: 1px solid #f1f1f1;
}

.form-control:focus {
  border-color: #f63854;
  box-shadow: none;
  outline: none;
}

textarea {
  border-radius: 4px !important;
  resize: none;
}

.form-control:focus {
  box-shadow: none;
  outline: none;
}

.btn.disabled,
.btn:disabled {
  opacity: 1;
}

.contact-form-area h2 {
  font-size: 18px;
  text-transform: uppercase;
}

.contact-right-area {
  margin-left: 50px;
}

.contact-right-area .contact-title {
  margin-bottom: 20px;
}

.contact-right-area .contact-title h1 {
  font-size: 22px;
}

.contact-right {
  padding: 4px;
}

.contact-right .single-contact {
  margin: 30px 0px;
  padding: 3px 55px;
  position: relative;
  color: #abacae;
}

.contact-right .single-contact p {
  margin-bottom: 0px;
}

.contact-right .single-contact p a {
  color: #abacae;
}

.contact-right .contact-icon {
  background: #f63854;
  color: #fff;
  border-radius: 4px;
  font-size: 20px;
  height: 40px;
  left: 0;
  padding-top: 8px;
  position: absolute;
  text-align: center;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 40px;
}

.h3 {
  margin-top: 25px;
  margin-left: 45px;
  font-size: 16px;

}

/*cta
*/
/* #cta {
  background: ;
} */
/* benefits section starts */
.section-feature {
  line-height: 48px;
  padding: 15px 0;
}

.com {
  font-size: 30px;
}

/* benefits section ends */

/* Footer Area Start */
/* Footer Area Start */
.footer-area {
  position: relative;
  padding: 60px 0px 0px;
  background: #000;
}

.footer-area .footer-titel {
  font-size: 18px;
  color: #fff;
  font-weight: 500;
  padding-bottom: 20px;
  letter-spacing: 0.5px;
}

.footer-area .contact-footer, .footer-news {
  font-size: 18px;
  color: #fff;
  font-weight: 500;
  padding-bottom: 5px;
  letter-spacing: 0.5px;
}

.footer-area .footer-titel span {
  color: #ccc;
  font-weight: 400;
}

.footer-logo {
  color: #fff;
}

.footer-area .textwidget p {
  color: #e1d9d1;
  margin-top: 10px;
}

.footer-area .footer-link li {
  margin-bottom: 10px;
}

.footer-area .footer-link li a {
  color: #e1d9d1;
  font-size: 14px;
  font-weight: 400;
  position: relative;
  text-decoration: none;
  margin-left: 2px;
}

.footer-area .footer-link li a:hover {
  color: #f63854;
}

.footer-area .address li {
  margin-bottom:0px;
}

.footer-area .address li a {
  color: #e1d9d1;
  font-size: 14px;
  line-height: 30px;
  font-weight: 400;
  text-decoration: none;
}

.footer-area .address li a i {
  font-size: 20px;
  width: 32px;
  vertical-align: middle;
  height: 32px;
  text-align: center;
  display: inline-block;
  margin-right: 5px;
  line-height: 32px;
}

.footer-area .address li a:hover {
  color: #f63854;
}

.footer-area #subscribe-form {
  margin-top: 10px;
}

.footer-area #subscribe-form .form-group {
  position: relative;
}

.footer-area #subscribe-form .form-group .btn-common {
  position: absolute;
  top: 0;
  right: 0;
  padding: 7px 15px;
  height: 52px;
  border-radius: 0;
  background: transparent;
  color: #f63854;
}

.mail input {
	padding:9px;
	width: 200px;
	font-family:helvetica;
	font-size:14px;
	border:0;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	outline:0;
}

.mail #btns {
	padding:9px;
	border:0;
	width: 80px;
  text-align: center;
	font-family:helvetica;
	font-size:14px;
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
  background-color: #f63854;
  color: #fff;
}
/* ... */

